<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CollectR</string>
    <string name="openForm">Open Form</string>
	<string name="openFormRepo">Load Forms from Repository</string>
	<string name="openConfig">Configuration</string>
	<string name="Quit">Quit</string>
	<string name="groupName">Groupname:</string>
	<string name="userName">Username:</string>
	<string name="Password">Password:</string>
	<string name="ServerURL">Server URL:</string>
	<string name="OK">OK</string>
	<string name="formulars">Forms:</string>
	<string name="formular">Form:</string>
	<string name="noFormsInRepository">No Forms in repository</string>
	<string name="showOwnForms">Show own Forms</string>
	<string name="downloadSelectedForms">Download selected Forms</string>
	<string name="DownloadMessage">Download the selected Forms</string>
	<string name="openFormsNoForms">No Forms installed</string>
	<string name="btnSaveElo">Save Form to Repository</string>
	<string name="btnOpenForm">Open Form</string>
	<string name="btnDeleteForm">Delete Form</string>
	<string name="msgDeleteForm">Delete this Form?</string>
	<string name="YES">Yes</string>
	<string name="NO">No</string>
	<string name="msgSaveToSQL">Saving Form</string>
	<string name="msgPleaseWait">Please wait...</string>
	<string name="btnDone">done</string>
	<string name="msgDeleteDataSet">Delete this Dataset?</string>
	<string name="tstRecordStart">Started ecording</string>
	<string name="tstRecordStop">Stopped recording</string>
	<string name="tstPlaybackStart">Started playback</string>
	<string name="tstPlaybackStop">Stopped playback</string>
	<string name="tstPlay">Play</string>
	<string name="tstPlayDONE">Playback done</string>
	<string name="tstCantStartRecording">Can not start recording</string>
	<string name="Events">Events</string>
	<string name="GPS">GPS:</string>
	<string name="noGPS">GPS was not available:</string>
	<string name="gpsProviderOff">GPS not available</string>
	<string name="gpsProviderOn">GPS available</string>
	<string name="Position">Position</string>
	<string name="of">of</string>
	<string name="msgLoadFormRepo">Loading Form from Repository</string>
	<string name="msgNoConnectionToRepository">No connection to Repository!</string>
	<string name="chkDownlaod">download</string>
	<string name="msgSaveToRepository">Save to Repository</string>
	<string name="msgPositionCapturing">Finding position</string>
	<string name="msgShowGPS">Show position</string>
	<string name="connectionError">Problems occurred during connection to repository!</string>
	<string name="notconfiguredyet">The application is not (completely) configured yet. Please click on Configuration and provide the needed values.</string>
	<string name="mainSelectForms">Select Forms</string>
	<string name="mainSelectFormsDescription">Browse and open downloaded forms, upload results and delete old ones</string>
	<string name="mainDownloadForms">Download Forms</string>
	<string name="mainDownloadFormsDescription">Browse and download forms from server to your device</string>
	<string name="mainConfiguration">Configuration</string>
	<string name="mainConfigurationDescription">Configure your username, your password and the form server address</string>
	<string name="storeFormResultMessagePositive">Form successfully saved</string>
	<string name="storeFormResultMessageNegative">Form could not be saved</string>
</resources>
