<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/ScrollView02"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:scrollbars="horizontal|vertical">
	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		xmlns:android="http://schemas.android.com/apk/res/android">

		<TextView android:text="@string/groupName" android:id="@+id/tvGroupName"
			android:layout_width="fill_parent" android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true" android:layout_height="wrap_content"></TextView>

		<EditText android:id="@+id/etGroupName" android:layout_below="@+id/tvGroupName"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text=""></EditText>

		<TextView android:text="@string/userName" android:id="@+id/tvUserName"
			android:layout_width="fill_parent" android:layout_below="@+id/etGroupName"
			android:layout_alignParentLeft="true" android:layout_height="wrap_content"></TextView>

		<EditText android:id="@+id/etUserName" android:layout_below="@+id/tvUserName"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text=""></EditText>

		<TextView android:text="@string/Password" android:id="@+id/tvPassword"
			android:layout_width="fill_parent" android:layout_below="@+id/etUserName"
			android:layout_alignParentLeft="true" android:layout_height="wrap_content"></TextView>

		<EditText android:id="@+id/etPassword" android:layout_below="@+id/tvPassword"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:password="true" android:text=""></EditText>

		<TextView android:text="@string/ServerURL" android:id="@+id/tvServerUrl"
			android:layout_width="fill_parent" android:layout_below="@+id/etPassword"
			android:layout_alignParentLeft="true" android:layout_height="wrap_content"></TextView>

		<EditText android:id="@+id/etServerUrl" android:layout_below="@+id/tvServerUrl"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text="TestServer"></EditText>

		<Button android:id="@+id/btnConfigClose" android:layout_below="@+id/etServerUrl"
			android:layout_height="wrap_content" android:layout_width="fill_parent"
			android:text="@string/OK"></Button>



	</RelativeLayout>

</ScrollView>
