<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<ImageView android:layout_width="wrap_content" android:id="@+id/Logo"
		android:src="@drawable/logo" android:layout_height="wrap_content"
		android:scaleType="center" android:layout_gravity="center_horizontal"
		android:layout_margin="5px"></ImageView>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center_horizontal">
		<Button android:text="@string/openForm" android:id="@+id/btnOpenOverview"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">
		</Button>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center_horizontal">
		<Button android:text="@string/openFormRepo" android:id="@+id/btnOpenDownloadForms"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">
		</Button>
	</LinearLayout>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center_horizontal">
		<Button android:text="@string/openConfig" android:id="@+id/btnOpenConfig"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">
		</Button>
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="horizontal" android:layout_gravity="center_horizontal">
		<Button android:text="@string/Quit" android:id="@+id/btnQuit"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">
		</Button>
	</LinearLayout>
</LinearLayout>
